# restaurant-translate-app

./: README.md  fix_langchain_indent.sh  fix_streamlit.sh  main.py  pyproject.toml  requirements.txt
app/: main.py
app/src/: csv_utils.py  langchain_utils.py  models.py  st_auth.py  st_utils.py  supabase_client.py
pages/: 0_🏠_Store_Register.py  1_📸_Menu_Maker.py  1_🚀_Suzuka_v2_Demo.py  2_📝_Phase2_Verification.py  2_📱_Owner.py  3_🍱_Phase3_Hearing.py  3_💎_Plan_Selection.py  98_👔_Sales.py  98_👔_Sales_Demo.py  99_🔧_Admin.py
resources/: example01.csv  ぴえろっと_long.csv  ぴえろっと_short.csv
src/: action_logger.py  csv_utils.py  global_menu_data.py  langchain_utils.py  models.py  multimodal_utils.py  observability.py  payment_guard.py  personas.py  st_auth.py  supabase_client.py
tonosama-phase1/: requirements.txt
tonosama-phase1/apps/api/: main.py
tonosama-phase1/apps/api/core/: gemini.py  models.py  normalization.py  observability.py
tonosama-phase1/apps/api/routes/: billing.py  demo.py  intake.py  phase3.py
tonosama-phase1/apps/web/: app.py
tonosama-phase1/apps/web/pages/: 1_demo.py  2_intake.py  3_hearing.py
tonosama-phase1/apps/web/ui_mario/: components.py  mario_shell.html
tonosama-phase1/apps/web/ui_mario/css/: mario_base.css  mario_buttons.css  mario_card.css  mario_toast.css
tonosama-phase1/apps/web/ui_mario/js/: mario_api.js  mario_boot.js  mario_events.js  mario_render.js  mario_state.js
tonosama-phase1/infra/: compose.yml
tonosama-phase1/infra/docker/: Dockerfile.api  Dockerfile.web
